--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <groupId>org.springframework.boot</groupId>
         <version>2.7.3</version>
     </parent>
-    <groupId>com.sky</groupId>
+    <groupId>com.qd</groupId>
     <artifactId>website-qd</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
