发帖功能代码开发

--- a/qd-server/pom.xml
+++ b/qd-server/pom.xml
@@ -115,6 +115,11 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.commonmark</groupId>
+            <artifactId>commonmark</artifactId>
+            <version>0.26.0</version>
+        </dependency>
     </dependencies>
 
     <build>
